force-app/main/default/objects/Question_Option__c/Question_Option__c.object-meta.xml
<CustomObject>
    <label>Question Option</label>
    <nameField>
        <label>Question Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>