force-app/main/default/objects/Question_Option__c/fields/Finish_Section__c.field-meta.xml
<CustomField>
    <fullName>Finish_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finish Section</label>
    <type>Checkbox</type>
</CustomField>