force-app/main/default/objects/Question_Option__c/fields/Following_Question__c.field-meta.xml
<CustomField>
    <fullName>Following_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Following Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Question Options (Following Question)</relationshipLabel>
    <relationshipName>Question_Options1</relationshipName>
    <type>Lookup</type>
</CustomField>