force-app/main/default/objects/Question_Option__c/fields/Option_Score__c.field-meta.xml
<CustomField>
    <fullName>Option_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Option Score</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>